gnome-shell (3.22.1-1) UNRELEASED; urgency=medium

  * New upstream release.

 -- Michael Biebl <biebl@debian.org>  Tue, 11 Oct 2016 17:35:26 +0200

gnome-shell (3.22.0-2) unstable; urgency=medium

  * Bump libgtk-3-dev build-dependency to >= 3.21.6 (Closes: #838885)
    (libgtk-3-0.symbols has Build-Depends-Package meta-header so this
     should ensure we get a dependency >= 3.21.6)
    Thanks to Michael Biebl for the analysis.

 -- Andreas Henriksson <andreas@fatal.se>  Sun, 09 Oct 2016 11:04:02 +0200

gnome-shell (3.22.0-1) unstable; urgency=medium

  * New upstream release.
  * Bump mutter dependencies to >= 3.22.0 as per configure.ac.

 -- Michael Biebl <biebl@debian.org>  Tue, 20 Sep 2016 01:54:15 +0200

gnome-shell (3.21.92-1) unstable; urgency=medium

  [ Andreas Henriksson ]
  * Bump gnome-tweak-tool Breaks to << 3.21.91 for the
    org.gnome.shell.calendar -> org.gnome.desktop.calendar schema key move.
  * Move gnome-tweak-tool and gnome-calendar Breaks to gnome-shell-common
    which is the package containing the schemas.

  [ Michael Biebl ]
  * New upstream development release.
  * Bump mutter dependencies to >= 3.21.92 as per configure.ac.
  * Bump debhelper compat level to 10.
  * Add explicit Build-Depends on gettext, pkg-config and autoconf-archive
    which are required for autoreconf.
  * Add Depends on libglib2.0-bin for gapplication. (Closes: #835221)
  * Install gnome-shell.portal from /usr/share/xdg-desktop-portal/portals
    which is required to provide the org.freedesktop.impl.portal.access
    implementation.

 -- Michael Biebl <biebl@debian.org>  Tue, 13 Sep 2016 18:34:18 +0200

gnome-shell (3.21.91-2) unstable; urgency=medium

  * Add Breaks against gnome-calendar (<< 3.21.4) to ensure we have a recent
    enough version which no longer uses the org.gnome.shell.calendar GSettings
    schema. It was removed from gnome-shell in favour of the
    org.gnome.desktop.calendar schema provided by gsettings-desktop-schemas.
